# cognaris-chatbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260530_1200_0001_create_session_tables.py
app/: main.py
app/api/: deps.py  errors.py
app/api/v1/: router.py
app/api/v1/endpoints/: health.py  sessions.py
app/core/: config.py  exceptions.py  ids.py  logging.py  time.py
app/domain/: events.py
app/domain/onboarding/: entities.py  enums.py  exceptions.py  repository.py  schemas.py  service.py
app/infrastructure/cache/: redis_client.py  session_cache.py
app/infrastructure/db/: base.py  session.py
app/infrastructure/db/models/: __init__.py  domain_event.py  message.py  session.py
app/infrastructure/db/repositories/: __init__.py  session_repository.py
app/tests/: conftest.py
app/tests/integration/: conftest.py  test_session_api.py  test_session_repository.py
app/tests/unit/: test_session_entity.py  test_session_service.py
